Bug 100382 - [SKL][SNA/DRI2] [drm:drm_wait_vblank [drm]] *ERROR* Unsupported type value 0x111, supported mask 0x7400003f
Summary: [SKL][SNA/DRI2] [drm:drm_wait_vblank [drm]] *ERROR* Unsupported type value 0x...
Status: CLOSED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-03-25 00:32 UTC by Peter Wu
Modified: 2017-03-27 11:01 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Xorg.0.log (62.09 KB, text/x-log)
2017-03-25 00:32 UTC, Peter Wu
no flags Details

Description Peter Wu 2017-03-25 00:32:53 UTC
Created attachment 130445 [details]
Xorg.0.log

On some actions, like opening a new window or dragging it around, the following message is visible in dmesg:

    [drm:drm_wait_vblank [drm]] *ERROR* Unsupported type value 0x111, supported mask 0x7400003f

This is always reproduced, but it only occurs when PRIME output slaving is active, and only when actions are executed on the external monitor connected to the Nvidia GPU (rather than the laptop monitor). Additionally, the external monitor must be primary (xrandr --output DP-1-1 --primary).

xorg-server 1.19.3-1
xf86-video-intel 1:2.99.917+767+g7e9e92c8-1
xf86-video-nouveau 1.0.14-1
Distro: Arch Linux x86_64 (testing repo enabled)
Desktop environment: Plasma 5.9.4-1
Laptop model: Clevo P651RA
CPU: i7-6700HQ
Display connector: miniDP (nouveau), eDP (Intel)

$ xrandr --listproviders
Providers: number : 2
Provider 0: id: 0x8c cap: 0xb, Source Output, Sink Output, Sink Offload crtcs: 4 outputs: 2 associated providers: 1 name:Intel
Provider 1: id: 0x66 cap: 0x7, Source Output, Sink Output, Source Offload crtcs: 4 outputs: 3 associated providers: 1 name:nouveau

Based on the type value (i.e. missing DRM_VBLANK_EVENT) and the call trace (perf trace --call-graph=dwarf -e syscalls:sys_enter_ioctl && perf report points to intel_drv.so), I guess that sna_query_vblank in src/sna/sna_dri2.c is responsible for this spew.

(Maybe it is (or it is not) related to bug 92327.)
Comment 1 Chris Wilson 2017-03-25 01:12:21 UTC
commit c0d41c371f52c87280630ac8182da44124dfd49f
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Sat Mar 25 01:07:07 2017 +0000

    sna: Protect against RROutputPrimary being on a slave
    
    RandR allows the Primary output to belong to a slave GPU, i.e. with the
    condition that screen->primaryOutput->screen != screen. When we fallback
    to using the PrimaryOutput, we therefore have to check that the output
    belong to us before treating it as a sna_output.
    
    Reported-by: Peter Wu <peter@lekensteyn.nl>
    Buzilla: https://bugs.freedesktop.org/show_bug.cgi?id=100382
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 2 Peter Wu 2017-03-25 10:33:52 UTC
Confirmed fixed with 2.99.917-770-gcb6ba2da, thanks!


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.